Fri Jan 28 01:00:56 CET 2005 Daniel Veillard <daniel@veillard.com>

	* win32/configure.js: Makefile fixes for Widows from Joel Reed

Sat Jan 22 22:14:26 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c libxslt/preproc.c libxslt/templates.c
	  libxslt/xslt.c libxslt/xsltInternals.h: chasing xmlStrEqual
	  calls and removed them when comparing mode and modeURI for
	  templates by interning those strings when compiling the
	  stylesheets.

Sat Jan 22 19:17:13 CET 2005 Daniel Veillard <daniel@veillard.com>

	* configure.in: small fix for local setup
	* libxslt/transform.c libxslt/variables.c : speeding up some
	  variable lookup. In the process dug out something nasty about
	  ctxt->dict creation and key initialization order.

Sat Jan 22 16:28:27 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/templates.c libxslt/transform.c libxslt/xslt.c
	  libxslt/xsltInternals.h: when copying text nodes in elements
	  or attributes to the output, if interning, then reuse the strings
	  directly without copying them in the output tree if dicts are
	  shared between the context and the output docs. Less allocations
	  smaller output document and no copying involved anymore.

Sat Jan 22 11:24:43 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: internalize all text node content from
	  stylesheet documents with the stylesheet dictionnary

Fri Jan 21 12:04:18 HKT 2005 William Brack <wbrack@mmm.com.hk>

	* tests/plugins/Makefile.am: Applied patch 11 (with small
	  modification) from Joel

Thu Jan 20 21:05:27 CET 2005 Daniel Veillard <daniel@veillard.com>

	* tests/plugins/Makefile.am tests/plugins/testplugin.c: applied
	  patch 10 from Joel Reed

Wed Jan 19 10:08:55 HKT 2005 William Brack <wbrack@mmm.com.hk>

	* libxslt/xsltwin32config.h, libxslt/xsltwin32config.h.in:
	  fixed a small error in LIBXSLT_VERSION_EXTRA pointed out
	  by Michael.Hewarth on the mailing list
	 
Wed Jan 19 13:58:16 CET 2005 Daniel Veillard <daniel@veillard.com>
